...
      }
    }
  };

  return (
    <View style={styles.container}>
      <Text style={styles.welcomeHeader}>Pick Your Security Image</Text>
      <SecurityImageForm
        radioItems={radioItems}
        checked={checked}
        setChecked={setChecked}
      />
      <TouchableOpacity
        style={[
          styles.confirmButton,
          isConfirmButtonDisabled && styles.disabledButton,
        ]}
        disabled={isConfirmButtonDisabled}
        onPress={handleConfirmPress}>
        <Text>Confirm</Text>
      </TouchableOpacity>
    </View>
  );
};

const styles = StyleSheet.create({
...
