...
              <Text style={styles.modalText}>
                Account created successfully!
              </Text>
              <TouchableOpacity
                onPress={(hideModal, goToLoginPage)}
                style={styles.modalButton}>
                <Text style={styles.modalButtonText}>OK</Text>
              </TouchableOpacity>
            </View>
          </View>
        </Modal>
      </View>
    );
  };

  return (
    <KeyboardAvoidingView style={styles.container}>
      <ScrollView contentContainerStyle={styles.scrollContainer}>
        <Text testID="loginHeader" style={styles.loginHeader}>
          Sign Up
        </Text>

        <TextInput
          style={styles.input}
          placeholder="Complete Name"
...
