...
        style={[
          styles.confirmButton,
          isConfirmButtonDisabled && styles.disabledButton,
        ]}
        disabled={isConfirmButtonDisabled} // Disable the button if no image is selected
        onPress={handleConfirmPress}>
        <Text>Confirm</Text>
      </TouchableOpacity>
    </View>
  );
};

const styles = StyleSheet.create({
...
